bk_ida/gccida/g1/gen_tablejump
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_tablejump/src/insn-emit.c:14383:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_tablejump/src/obj/insn-emit.o] Error 1
